--- a/.github/workflows/version-and-release.yml
+++ b/.github/workflows/version-and-release.yml
@@ -31,12 +31,12 @@ jobs:
         WITH_V: true
         DEFAULT_BUMP: patch
 
-    - name: Run GoReleaser - Build and make github release
-      uses: goreleaser/goreleaser-action@v2
-      with:
-        args: release --rm-dist
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Run GoReleaser - Build and make github release
+    #   uses: goreleaser/goreleaser-action@v2
+    #   with:
+    #     args: release --rm-dist
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Log in to the Container registry
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
