--- a/.github/workflows/version-and-release.yml
+++ b/.github/workflows/version-and-release.yml
@@ -62,4 +62,5 @@ jobs:
         context: .
         push: true
         tags: ${{ env.REGISTRY }}/danthegoodman1/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/danthegoodman1/${{ env.IMAGE_NAME }}:${{ steps.previoustag.outputs.tag }}
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
+        # ,linux/arm64
